# code_plagiarism_checker

./: CMakeLists.txt  Makefile  README.md  check_codes.py  requirements.txt
ast-parser/: ast_parser.py
codes/: cnv2.cpp  coov1.cpp  coov2.cpp  cvt1.cpp  dv1.cpp  dv2.cpp  example_code.cpp  fun-main1.cpp  fun-main2.cpp  global2.cpp  io1.cpp  io2.cpp  loop1.cpp  loop2.cpp  prefix1.cpp  prefix2.cpp  unused1.cpp  unused2.cpp
include/: student_markers.h  tree_isomorphism.h
src/: main.cpp  tree_isomorphism.cpp
thesis-codes/: easy_modified.cpp  fibonacci_iterative.cpp  fibonacci_recursive.cpp  hard_modified.cpp  in_same_graph_bfs.cpp  in_same_graph_dfs.cpp  medium_modified.cpp  order_a.cpp  order_b.cpp
